Add more tests, error handling, and fixtures
I've added basic tests to ensure caching, network access,
and HTTP responses work as expected for the weather endpoint.

I've also added some checks to ensure only US and Canada are
supported by the application. Supporting _all_ countries
requires more work, so I've decided to constrain the
functionality for now.

I typically don't love working with VCR because it can be
quite cumbersome to capture certain requests with more complex
APIs, but the APIs I'm using here are simple, no-auth-required,
and easy-to-replicate locally.

--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -4,7 +4,11 @@
 <% end %>
 
 <% if @results %>
+  <hr />
+
   <% @results.each do |r| %>
-    <a href="<%= weather_path(*r.to_param) %>"><%= r.name %></a>
+    <div>
+      <a href="<%= weather_path(*r.to_param) %>"><%= r.name %></a>
+    </div>
   <% end %>
 <% end %>
