Add high/low temperature...
This commit introduces a bug and may not be worth shipping at all until
fixed, but I opted to include it anyway.

The meteo API expects a timezone for daily summarizations (like
high/low) and forecasting. It uses this to calculate the appropriate
start and end times. When not specified, it defaults to GMT and
can return highs/lows based on the wrong time of day.

Another option is to manually compute high/low from hourly forecast
data, but it still doesn't fix the problem around boundaries.

The proper fix is to translate lat/long coordinates to a timezone,
something possible with _another_ API and the `timezone` gem. Instead of
going down the route of fixing this, I left it unfinished. In a
production setting, the introduction of this new dependency would
require some discussion with my team/PM before implementation.

Along the way I added slighly better error handling for incomplete
weather results, so the page is still rendered and cached if
data is not available.

--- a/app/views/weather/show.html.erb
+++ b/app/views/weather/show.html.erb
@@ -1,3 +1,15 @@
 <h1><%= @address.name %></h1>
 
-<%= @weather.temp %>
+<% if @weather.current_temp %>
+  <p><b>Temperature</b> <%= @weather.current_temp %></p>
+<% else %>
+  <p><b>Temperature</b> <i>Unavailable</i></p>
+<% end %>
+
+<% if @weather.high_temp %>
+  <p><b>Daily high</b> <%= @weather.high_temp %></p>
+<% end %>
+
+<% if @weather.low_temp %>
+  <p><b>Daily low</b> <%= @weather.low_temp %></p>
+<% end %>
