--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,11 @@
 
   <body>
     <%= yield %>
+
+    <% if @cached_page %>
+      <div id="cache-status">
+        Cached: <%= @cached ? 'yes' : 'no' %>
+      </div>
+    <% end %>
   </body>
 </html>
