--- a/app/views/weather/show.html.erb
+++ b/app/views/weather/show.html.erb
@@ -13,3 +13,5 @@
 <% if @weather.low_temp %>
   <p><b>Daily low</b> <%= @weather.low_temp %></p>
 <% end %>
+
+<p>Weather data generated at <%= Time.now %></p>
